接下来准备开发oss图片保存功能，接的是腾讯云的oss，最好也能兼容阿里云oss。 1、生成的图片自动上传oss，对用户返回oss图片地址； 2、用户上传的参考图自动上传oss； 3、某些模型返回的图片url，要把图片转存到oss； 4、设计oss/存储空间概念，每个用户有有限的空间，将来需要付费； 5、游客不保存到oss，也没有存储空间；
